tests/bad/assign1.tig
let 
    function id (x : int) : int = (
        x := 4;
        x
    )
in id (3)
end
